# varfish-cli-ng

./: .gitignore  CHANGELOG.md  CONTRIBUTORS.rst  LICENSE  Makefile  Pipfile  README.md  SECURITY.rst  pyproject.toml  setup.cfg  smithy-build.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker-cleanup-pr.yml  docker-cleanup-untagged.yml  main.yml  release-please.yml
model/: varfish.smithy
src/varfish_cli/: cli.py
utils/docker/: Dockerfile  build-docker.sh  entrypoint.sh
utils/terraform/: main.tf
