[project]
name = "varfish-cli-ng"
authors = [
  { name="Manuel Holtgrewe", email="manuel.holtgrewe@bih-charite.de" },
]
description = "(Upcoming) aws smithy based client for VarFish"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps."
]
keywords = [
    "bioinformatics",
    "genome variation",
    "genomics",
    "variation"
    ]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/bihealth/varfish-cli-ng"
"Bug Tracker" = "https://github.com/bihealth/varfish-cli-ng/issues"

[project.scripts]
"varfish-cli" = "varfish_cli.cli:main"


[build-system]
requires = [
	 "setuptools >= 65.3",
   	 "setuptools_scm[toml] ~= 7.0"
	 ]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]


# https://docs.pytest.org/en/6.2.x/customize.html#pyproject-toml
[tool.pytest.ini_options]
addopts = "-s -v -x --strict-markers -m 'not extra' --doctest-modules --cov=src --cov-report lcov --cov-report term-missing"
doctest_optionflags = [
    "ALLOW_BYTES",
    "ALLOW_UNICODE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
    "NORMALIZE_WHITESPACE",
]


[tool.coverage.run]
branch = true
source = ["varfish_cli"]
omit = ["*_test.py", "*/test/*"]


[tool.coverage.report]
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
]

[tool.black]
line-length = 100


# [tool.flake8]
# flake8 does not support configuration in pyproject.toml
# https://github.com/PyCQA/flake8/issues/234#issuecomment-812800832
# The config in setup.cfg

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100


[tool.pylint.'MESSAGES CONTROL']
disable = "R0913"


[tool.pylint.format]
max-line-length = "120"
