[options]
zip_safe = True
include_package_data = True
packages = find_namespace:
package_dir =
    =src
install_requires =

[options.packages.find]
where = src
# TODO: Needed?
# exclude =
#     __pycache__
#     *.pyc


setup_requires =
    pytest-runner
    setuptools_scm
    wheel

[options.package_data]
hgvs =
    _data/*


[options.extras_require]
dev =
    black
    flake8
    ipython
    isort
    pytest
    pytest-cov
    setuptools
    sphinx
    sphinx_rtd_theme


[aliases]
test = pytest

[bdist_wheel]
universal = 1

[build_sphinx]
all_files  = 1

# http://pep8.readthedocs.org/en/latest/intro.html#error-codes
[flake8]
exclude =
    .*.py
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503
max-line-length = 100
application_import_names = app
import-order-style = google


[report]
show_missing = True
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if __name__ == .__main__.:
